# oj

./: 10_24.md  10_25.md  10_26.md  README.md  advance.md  ai_task.txt  functions.md
JudgeServer/: Dockerfile
JudgeServer/Judger/: CMakeLists.txt
JudgeServer/Judger/bindings/Python/_judger/: __init__.py
JudgeServer/Judger/src/: child.c
JudgeServer/Judger/src/rules/: arm64.c  seccomp_rules.h
JudgeServer/server/: compiler.py  config.py  entrypoint.sh
Judger/: CMakeLists.txt
Judger/src/: main.c
OnlineJudge/: Dockerfile.dev  Dockerfile.prod  download.py  nohup.out
OnlineJudge/account/: decorators.py  models.py
OnlineJudge/account/migrations/: 0013_auto_20251018_1001.py
OnlineJudge/ai/: models.py  realtime_completion.py  serializers.py  service.py  urls.py  utils.py  views.py
OnlineJudge/ai/dl_models/: __init__.py  deep_learning.py  recommendation_model.py
OnlineJudge/ai/migrations/: 0001_initial.py  0002_alter_aiconversation_title.py  0003_alter_aiconversation_title.py  0004_airecommendation_airecommendationfeedback.py  0005_auto_20251020_1940.py  0006_aiuserknowledgestate_aiuserlearningpath_aiuserlearningpathnode.py  0007_knowledgepoint.py  0008_auto_20251022_1515.py  0009_aiuserlearningpathnode_knowledge_point.py  0010_knowledgepoint_weight.py  0011_aiabilitydimension_aiprogrammingability_aiuserabilitydetail.py  0012_auto_20251027_1928.py  0013_auto_20251030_1641.py  0014_auto_20251101_2109.py  0015_aiuserabilityhistory.py
OnlineJudge/ai/ml_models/: ability_model_0.pkl  ability_model_1.pkl  ability_model_2.pkl  ability_model_3.pkl  ability_model_4.pkl  feature_scaler.pkl  (+1 more)
OnlineJudge/assignment/: models.py  serializers.py  urls.py  views.py
OnlineJudge/deploy/: entrypoint.sh  requirements.txt
OnlineJudge/judge/: dispatcher.py  languages.py
OnlineJudge/oj/: settings.py  urls.py
OnlineJudge/problem/: models.py  serializers.py
OnlineJudgeDeploy/: docker-compose.yml
OnlineJudgeFE/: .dockerignore  Dockerfile.dev  Dockerfile.prod  package.json  package.json.bak  webpack.config.override.js
OnlineJudgeFE/config/: dev.env.js  index.js
OnlineJudgeFE/deploy/: nginx.conf  nginx.conf.bak  run.sh
problems/xml_problems/: test.xml
(+113 files in other folders)
